--- a/Resources/administration/src/app/component/entity/sw-entity-listing/sw-entity-listing.html.twig
+++ b/Resources/administration/src/app/component/entity/sw-entity-listing/sw-entity-listing.html.twig
@@ -3,13 +3,13 @@
 {% endblock %}
 
 {% block sw_data_grid_slot_actions %}
-    <slot name="detail-action" :item="item">
+    <slot name="detail-action" v-bind="{ item }">
         <sw-context-menu-item v-if="detailRoute" :routerLink="{ name: detailRoute, params: { id: item.id } }">
             {{ $tc('global.entity-components.editAction') }}
         </sw-context-menu-item>
     </slot>
 
-    <slot name="more-actions" :item="item"></slot>
+    <slot name="more-actions" v-bind="{ item }"></slot>
 
     <slot name="delete-action" :item="item">
         <sw-context-menu-item @click="showDelete(item.id)" variant="danger">
@@ -21,13 +21,13 @@
 {% block sw_data_grid_slot_action_modals %}
     <sw-modal v-if="deleteId === item.id" @closeModal="closeModal" :title="$tc('global.entity-components.deleteTitle')" variant="small">
         <p class="sw-listing__confirm-delete-text">
-            <slot name="delete-confirm-text">
+            <slot name="delete-confirm-text" v-bind="{ item }">
                 {{ $tc('global.entity-components.deleteMessage') }}
             </slot>
         </p>
 
         <template slot="modal-footer">
-            <slot name="delete-modal-footer">
+            <slot name="delete-modal-footer" v-bind="{ item }">
                 <sw-button @click="closeModal" size="small">
                     {{ $tc('global.entity-components.deleteCancel') }}
                 </sw-button>
