--- a/Resources/administration/src/app/component/form/sw-select-option/sw-select-option.html.twig
+++ b/Resources/administration/src/app/component/form/sw-select-option/sw-select-option.html.twig
@@ -1,20 +1,20 @@
-{% block sw_select_option %}
+{% block sw_single_select_option %}
     <li
         class="sw-select-option"
         :class="componentClasses"
         @mouseenter="onMouseEnter($event)"
         @click.stop="onClicked($event)">
-        {% block sw_select_option_item_text_holder %}
+        {% block sw_single_select_option_item_text_holder %}
             <span class="sw-select-option__result-item-text">
-                 {% block sw_select_option_item_text %}
+                 {% block sw_single_select_option_item_text %}
                      <slot></slot>
                  {% endblock %}
              </span>
         {% endblock %}
 
-        {% block sw_select_option_item_icon_transition %}
+        {% block sw_single_select_option_item_icon_transition %}
             <transition name="sw-select-appear">
-                {% block sw_select_option_item_icon %}
+                {% block sw_single_select_option_item_icon %}
                     <sw-icon v-if="isInSelections(item) && !selected || selected"
                              name="small-default-checkmark-line-medium"
                              size="16px">
