NEXT-2558 - fix product stream filter value data type

--- a/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/component/sw-product-stream-filter/sw-product-stream-filter.html.twig
@@ -155,7 +155,7 @@
                   :type="getValueFieldByType(lastField.type)"
                   class="field--main"
                   :disabled="isApi()"
-                  v-model="actualCondition.value">
+                  v-model="filterValue">
         </sw-field>
     {% endblock %}
 {% endblock %}
