NEXT-2607 - Plugin Manager Polishing

--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-table-entry/sw-plugin-table-entry.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-table-entry/sw-plugin-table-entry.html.twig
@@ -6,7 +6,7 @@
         {% endblock %}
         {% block sw_plugin_table_entry_icon_container %}
             <div class="sw-plugin-table-entry__text-container">
-                <p>{{ title }}</p>
+                <p class="sw-plugin-table-entry__title">{{ title }}</p>
                 <p class="sw-plugin-table-entry__subtitle">{{ subtitle }}</p>
             </div>
         {% endblock %}
