--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.html.twig
@@ -40,7 +40,7 @@
                                             <template slot="label">
                                                 <div class="shopware-id-label">
                                                     <span>{{ $tc('sw-plugin.store-login.labelShopwareId') }}</span>
-                                                    <a href="#" target="_blank">{{ $tc('sw-plugin.store-login.labelShopwareIdHelp') }}</a>
+                                                    <a :href="$tc('sw-plugin.store-login.linkShopwareIdHelp')" target="_blank">{{ $tc('sw-plugin.store-login.labelShopwareIdHelp') }}</a>
                                                 </div>
                                             </template>
                                         {% endblock %}
