NEXT-2607 - fixing and adding snippets and error messages

--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-last-updates-grid/sw-plugin-last-updates-grid.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-last-updates-grid/sw-plugin-last-updates-grid.html.twig
@@ -21,9 +21,9 @@
                                     {% block sw_plugin_last_updates_card_grid_columns_name %}
                                         <sw-grid-column flex="minmax(100px, 1fr)"
                                                         :label="$tc('sw-plugin.list.columnPlugin')"
-                                                        dataIndex="name">
+                                                        dataIndex="label">
                                             {% block sw_plugin_last_updates_card_grid_columns_name_label %}
-                                                <sw-plugin-table-entry :icon="item.icon" :title="item.name"
+                                                <sw-plugin-table-entry :icon="item.icon" :title="item.label"
                                                                        :subtitle="item.upgradedAt | date">
                                                 </sw-plugin-table-entry>
                                             {% endblock %}
