NEXT-2607 - Fix issues with plugin names and further polishing

--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-updates-grid/sw-plugin-updates-grid.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-updates-grid/sw-plugin-updates-grid.html.twig
@@ -35,7 +35,7 @@
                                                         :label="$tc('sw-plugin.list.columnPlugin')"
                                                         dataIndex="name">
                                             {% block sw_plugin_updates_list_grid_columns_name_label %}
-                                                <sw-plugin-table-entry :iconPath="item.iconPath" :title="item.name"
+                                                <sw-plugin-table-entry :iconPath="item.iconPath" :title="item.label"
                                                                        :subtitle="item.releaseDate | date">
                                                 </sw-plugin-table-entry>
                                             {% endblock %}
