--- a/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.html.twig
+++ b/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.html.twig
@@ -73,7 +73,7 @@
                                             {% block sw_plugin_list_grid_columns_activated_label %}
                                                 <sw-field type="switch"
                                                           :disabled="!item.installedAt"
-                                                          :label="item.active ? 'Aktiviert' : 'Deaktiviert'"
+                                                          :label="item.active ? $tc('sw-plugin.list.activated') : $tc('sw-plugin.list.deactivated')"
                                                           v-model="item.active"
                                                           v-on:change="changeActiveState(item)">
                                                 </sw-field>
